@@ -76,6 +76,11 @@ written any matching metadata will be added to the SAC header.  See
 Specify a "line" of metadata in the same format as expected for the
 \fIMETADATA FILES\fP.  This option may be specified multiple times.
 
+.IP "-s         "
+Scale the data, inversely, by the scale factor in metadata.  Integer
+data will be converted to float type.  The relavent units from the
+metadata will be reported in the header.
+
 .IP "-f \fIformat\fP"
 The default output format is sample list.  This option applies to all
 output files:
