@@ -1,6 +1,8 @@
 2018.074:
 	- Add -m and -M options to accept simple metadata, included in
 	GeoCSV output.
+	- Add -s option to scale (inversely) data by the scale factor in
+	supplied metadata, units from the metadata are reported in header.
 
 2018.073:
 	- Update libmseed to 2.19.5.
